2004-08-31  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Straighten error path.
	(xnpod_calibrate_sched): Disable autocalibration of the scheduling
	latency for architectures that do not provide an aperiodic timing
	source.

	* nucleus/module.c (__xeno_main_init): Straighten error path.

2004-08-30  Philippe Gerum  <rpm@xenomai.org>

	* nucleus: Define CONFIG_RTAI_HW_APERIODIC_TIMER.

	* nucleus/timer.c (xntimer_enqueue): Completely dissociate
	periodic from aperiodic timer enqueueing/dequeueing.

2004-08-30  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/ppc/hal/hal.c: Move the Doxygen documentation to a new
	group, 	hal_ppc, in order to avoid clash (and doxygen warnings)
	with x86 documentation.

2004-08-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_migrate): Initial implementation of a
	migration function.

	* nucleus/pod.c (xnpod_init, xnpod_shutdown): Remove useless calls
	to set_cpus_allowed.

	* nucleus, */system.h: Use cpumask_t for affinity, providing
	an 'unsigned long' based implementation for architectures other
	than the Linux kernel.

2004-08-29  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/pod.h (struct pod): Remove the usrthread member;
	it became meaningless with the dismissal of the threaded interrupt
	model.

	* nucleus: Prefer non-atomic bitops when applicable.

	* nucleus/pod.c (xnpod_schedule): Clarify the path to switch
	decision a bit.

2004-08-29  Marc Kleine-Budde <kleine-budde@gmx.de>

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Do not
	fiddle with Altivec-related information if Altivec support is not
	configured in.

2004-08-28  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_next_shot): Update timer shot
	anticipation.

2004-08-27  Philippe Gerum  <rpm@xenomai.org>

	* nucleus: Add support for execution timestamps aimed at chasing
	excessive jitter.
